# chartacritty

./: Cargo.toml  Makefile  README.md  TODO  alacritty.yml  chartacritty.yml  rustfmt.toml
.builds/: freebsd.yml  linux.yml
.github/workflows/: ci.yml  release.yml  upload_asset.sh
alacritty/: Cargo.toml
alacritty/res/: hex_bg.f.glsl  hex_bg.v.glsl
alacritty/src/: cli.rs  display.rs  event.rs  input.rs  main.rs  message_bar.rs  panic.rs  url.rs  window_context.rs
alacritty/src/config/: bindings.rs  charts.rs  decorations.rs  mod.rs  ui_config.rs  window.rs
alacritty/src/display/: mod.rs  window.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/renderer/: charts.rs  hex_bg.rs  mod.rs  rects.rs
alacritty/src/renderer/text/: builtin_font.rs
alacritty/windows/wix/: alacritty.wxs  chartacritty.wxs
alacritty_charts/: Cargo.toml  README.md  charts.yml
alacritty_charts/src/: async_utils.rs  config.rs  decorations.rs  lib.rs  prometheus.rs
alacritty_common/: Cargo.toml
alacritty_common/src/: ansi.rs  index.rs  lib.rs  renderer.rs  selection.rs
alacritty_common/src/config/: colors.rs  mod.rs
alacritty_common/src/grid/: mod.rs  resize.rs  row.rs  storage.rs
alacritty_common/src/term/: cell.rs  color.rs  mod.rs
alacritty_config/: Cargo.toml
alacritty_config_derive/: Cargo.toml
alacritty_decorations/: Cargo.toml
alacritty_decorations/src/: lib.rs
alacritty_terminal/: Cargo.toml  charts.md  charts.yml  decorations.yml
alacritty_terminal/src/: ansi.rs  display.rs  event.rs  event_loop.rs  index.rs  lib.rs  message_bar.rs  selection.rs  vi_mode.rs
alacritty_terminal/src/async_utils/: mod.rs
alacritty_terminal/src/charts/: async_utils.rs  config.rs  decorations.rs  lib.rs  mod.rs  prometheus.rs
alacritty_terminal/src/config/: mod.rs  window.rs
alacritty_terminal/src/decorations/: hexagon_line_background.rs  hexagon_point_background.rs  hexagon_triangle_background.rs  lyon_decor.rs  mod.rs  moon_phase.rs  nannou.rs  polar_clock.rs
alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
alacritty_terminal/src/term/: cell.rs  color.rs  mod.rs  search.rs
alacritty_terminal/src/tty/: unix.rs
alacritty_terminal/src/tty/windows/: automatic_backend.rs  conpty.rs  mod.rs  winpty.rs
alacritty_terminal/tests/: ref.rs
extra/: chartacritty.info
extra/linux/: Chartacritty.desktop  org.chartacritty.Chartacritty.appdata.xml
extra/osx/Chartacritty.app/Contents/: Info.plist
res/: hex_bg.f.glsl  hex_bg.v.glsl
