[package]
name = "alacritty_charts"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13.6"
futures = "0.3.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.7"
percent-encoding = "1.0.1"
hyper-tls = "0.4.1"
failure = "0.1.6"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = { version = "0.1", features = ["env_logger"]}
alacritty_common = { path = "../alacritty_common" }
