[package]
name = "alacritty_decorations"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty_common = { path = "../alacritty_common" }
log = "0.4"
alacritty_charts = { path = "../alacritty_charts" }
