[package]
name = "alacritty_terminal"
version = "0.19.1-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.65.0"

[dependencies.alacritty_config_derive]
path = "../alacritty_config_derive"
version = "0.2.2-dev"

[dependencies.alacritty_config]
path = "../alacritty_config"
version = "0.1.2-dev"

[dependencies]
base64 = "0.13.0"
bitflags = { version = "2.2.1", features = ["serde"] }
home = "0.5.5"
libc = "0.2"
log = "0.4"
mio = "0.6.20"
mio-extras = "2"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.2"
rustls = "0.21.8"
rustls-native-certs = "0.6"
serde_derive = "1.0"
serde_json = "1"
env_logger = "0.7"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = { version = "0.1", features = ["env_logger"]}
percent-encoding = "2.2"
rand = "0.8.5"
lyon = { version ="1.0", features = ["serialization"] }
chrono = { version = "0.4.31", features = [ "serde" ] }
moon-phase = "0.1.0"
parking_lot = "0.12.0"
regex-automata = "0.1.9"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.8"
unicode-width = "0.1"
vte = { version = "0.11.1", default-features = false, features = ["ansi", "serde"] }
noise = "0.8.2"
palette = { version = "0.7.3", features = ["serializing", "named"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", default-features = false, features = ["term"] }
signal-hook = "0.3.10"
signal-hook-mio = { version = "0.2.1", features = ["support-v0_6"] }

[target.'cfg(windows)'.dependencies]
mio-anonymous-pipes = "0.2"
miow = "0.3"
windows-sys = { version = "0.36", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
serde_json = "1"
