[package]
name = "alacritty_terminal"
version = "0.22.1-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
base64 = "0.21.3"
bitflags = { version = "2.4.1", features = ["serde"] }
home = "0.5.5"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.0"
polling = "3.0.0"
regex-automata = "0.4.3"
unicode-width = "0.1"
vte = { version = "0.13.0", default-features = false, features = ["ansi", "serde"] }
serde = { version = "1", features = ["derive", "rc"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3.28"
tokio-native-tls = "0.3"
tower-service = "0.3"
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.9"
env_logger = "0.7"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = { version = "0.2"}
percent-encoding = "2.2"
rand = "0.8.5"
lyon = { version ="1.0", features = ["serialization"] }
chrono = { version = "0.4.31", features = [ "serde" ] }
moon-phase = "0.1.0"
noise = "0.8.2"
palette = { version = "0.7.3", features = ["serializing", "named"] }
bytes = "1.5"

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.1.1"
signal-hook = "0.3.10"

[target.'cfg(windows)'.dependencies]
piper = "0.2.1"
miow = "0.6.0"
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
serde_json = "1"
