[package]
name = "alacritty_terminal"
version = "0.24.2-dev"
authors = [
    "Christian Duerr <contact@christianduerr.com>",
    "Joe Wilm <joe@jwilm.com>",
]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://github.com/sebosp/alacritty"
repository = "https://github.com/sebosp/chartacritty"
edition = "2021"
rust-version = "1.74.0"

[features]
default = ["serde"]
serde = ["dep:serde", "bitflags/serde", "vte/serde"]

[dependencies]
base64 = "0.22.1"
bitflags = "2.6.0"
home = "0.5.11"
libc = "0.2.169"
log = "0.4.22"
parking_lot = "0.12.3"
polling = "3.7.4"
regex-automata = "0.4.9"
unicode-width = "0.2.0"
vte = { version = "0.13.0", default-features = false, features = ["ansi"] }
serde = { version = "1", features = ["derive", "rc"], optional = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tokio-native-tls = "0.3"
tower-service = "0.3"
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.9"
env_logger = "0.11"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = { version = "0.2" }
percent-encoding = "2.3"
rand = "0.8.5"
lyon = { version = "1.0", features = ["serialization"] }
chrono = { version = "0.4.39", features = ["serde"] }
moon-phase = "0.1.0"
noise = "0.9.0"
palette = { version = "0.7.6", features = ["serializing", "named"] }
bytes = "1.9"

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.1.1"
signal-hook = "0.3.17"

[target.'cfg(windows)'.dependencies]
piper = "0.2.4"
miow = "0.6.0"
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
serde_json = "1"
